# ConnectFour

./: CMakeLists.txt
include/: ai.h  assets.h  engine.h  game.h
src/: engine.cpp  game.cpp  main.cpp
